# tree-sitter-beancount

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  account-token-es6.js  account-token.js  binding.gyp  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-beancount.wasm  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-beancount.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_beancount/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
corpus/: balance.txt  comments.txt  directives.txt  transactions.txt
examples/: example.beancount  example.tree
examples/tree/: example.beancount
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: balance.txt  comments.txt  currencies.txt  error_handling.txt  strings.txt  transactions.txt  whitespace.txt
